<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/termTextViewText" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/termTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/termEditText"
        android:layout_below="@+id/termTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LookUpButtonText"
        android:id="@+id/lookUpButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/termEditText"
        android:layout_toLeftOf="@+id/updateButton"
        android:layout_toStartOf="@+id/updateButton"
        android:onClick="onLookUpButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateButtonText"
        android:id="@+id/updateButton"
        android:layout_alignTop="@+id/lookUpButton"
        android:layout_centerHorizontal="true"
        android:onClick="onUpdateButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeButtonText"
        android:id="@+id/removeButton"
        android:layout_alignTop="@+id/updateButton"
        android:layout_toRightOf="@+id/updateButton"
        android:layout_toEndOf="@+id/updateButton"
        android:onClick="onRemoveButtonClick" />

    <TextView
        android:text="@string/DefinitionTextViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/definitionTextView"
        android:layout_below="@+id/lookUpButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/DefEditText"
        android:layout_below="@+id/definitionTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/termEditText"
        android:layout_alignEnd="@+id/termEditText" />

</RelativeLayout>
